welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: Int(0) does not take parameters
while(nbPas!=0()) {recule();}
              ^